tests/compile-errors/ce-ref-prop.valk

class X {
    test: [u8 x 10] ({0...})
}
fn main() {
    let x = X{}
    let a = x.test
}

